# NexusData

./: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  PLAN.md  READMEs.md  demo.py  index.html  nexus_cli.py  pyproject.toml  requirements.txt
gitpage/: NexusData.html
nexus_data/: __init__.py  cli.py  models.py  orchestrator.py
nexus_data/analyst/: __init__.py  agent.py
nexus_data/auth/: manager.py  models.py
nexus_data/chronicler/: __init__.py
nexus_data/core/: __init__.py  config_manager.py  env_writer.py  request_logger.py  reset.py  setup_wizard.py  slash_commands.py
nexus_data/critic/: __init__.py  anomaly_detector.py  guardian.py  performance_advisor.py  pre_validator.py  self_healer.py
nexus_data/diplomat/: __init__.py  clarification.py  confidence.py
nexus_data/engine/: __init__.py  app.py  llm_controller.py  ui_server.py
nexus_data/kb/: __init__.py  audit_log.py  bookmarks.py  conversation_graph.py  entity_tracker.py  graph_store.py  kb_updater.py  manager.py  vector_repo.py
nexus_data/librarian/: __init__.py  connector.py  introspector.py  profiler.py
nexus_data/pipeline/: __init__.py  decomposer.py  executor.py  goal_identifier.py  normalizer.py  planner.py  reference_resolver.py
nexus_data/ui/: NexusData.html  index.html
nexus_kb/: longterm_memory.md
nexus_kb/test/: audit_20260324.jsonl  conversation_lineage.json  db_info.md  query_graph.json  shortterm_memory.md
nexus_kb/test/vector_store/query_repo.lance/_transactions/: 0-a21ad16b-6a5c-47cc-93b4-f1bfc41955d7.txn  1-0674fe76-aa54-4d33-b068-49522422e032.txn
scripts/: create_test_db.py
tests/: __init__.py  conftest.py  simulated_flow.py  test_anomaly_detector.py  test_audit_log.py  test_bookmarks.py  test_comprehensive_pipeline.py  test_connector.py  test_entity_tracker.py  test_goal_identifier.py  test_graph_store.py  test_guardian.py  test_id_only_select.py  test_kb.py  test_kb_updater.py  test_performance_advisor.py  test_pipeline_integration.py  test_reference_resolver.py  test_reset.py  test_vector_repo.py
