[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusdata"
version = "1.0.0"
description = "The Universal Agentic Natural-Language Data Interlocutor"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "sqlalchemy>=2.0.28",
    "pydantic>=2.6.4",
    "sqlglot>=23.0.0",
    "sentence-transformers>=2.5.1",
    "lancedb>=0.6.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "questionary>=2.0.1",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql    = ["pymysql>=1.1"]
mssql    = ["pyodbc>=5.0"]
dev      = ["pytest>=8.1.1", "pytest-asyncio>=0.23.6"]

# ── Console entry points ───────────────────────────────────────────────────────
# After `pip install -e .` or `pip install nexusdata`:
#   nexusdata      → interactive terminal CLI
#   nexusdata-ui   → FastAPI backend + chat UI web server
[project.scripts]
nexusdata    = "nexus_data.cli:main"
nexusdata-ui = "nexus_data.engine.ui_server:main"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["nexus_data*"]

# nexus_cli.py lives at project root — include as a top-level module
[tool.setuptools]
py-modules = ["nexus_cli"]

# Bundle the UI static files into the distribution wheel
[tool.setuptools.package-data]
"nexus_data" = ["ui/*", "ui/**/*"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
log_cli      = true
log_level    = "WARNING"
